--- a/shots.yml
+++ b/shots.yml
@@ -1,3 +1,9 @@
 - url: https://www.wsj.com/
   output: shot.png
-  height: 800
+  width: 1600
+  height: 1600
+  quality: 80
+  javascript: |
+    document.querySelectorAll(
+      '[data-ad-rendered],#ensNotifyBanner'
+    ).forEach(el => el.style.display = 'none')
